--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-go-top": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "read-more-react": "^1.0.10",
     "serve": "^12.0.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
