--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-go-top": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "react-typing-animation": "^1.6.2",
     "read-more-react": "^1.0.10",
     "serve": "^12.0.1",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
