--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
-    "emailjs-com": "^3.2.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-go-top": "^1.1.1",
+    "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "react-typing-animation": "^1.6.2",
     "read-more-react": "^1.0.10",
     "serve": "^12.0.1",
-    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
