--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-go-top": "^1.1.1",
     "react-particles-js": "^3.6.0",
+    "react-range": "^1.8.11",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
