--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-particles-js": "^3.6.0",
     "react-range": "^1.8.11",
     "react-router-dom": "^5.3.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "react-typing-animation": "^1.6.2",
